WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53914
Web Inspector: ignore cache upon reload via Ctrl(Cmd)+Shift+R.
https://bugs.webkit.org/show_bug.cgi?id=53914
Summary
Web Inspector: ignore cache upon reload via Ctrl(Cmd)+Shift+R.
Pavel Feldman
Reported
2011-02-07 07:25:35 PST
With this patch, Ctrl+Shift+R Ctrl+F5 Shift+F5 on Win/Linux and Cmd+Shift+R on Mac from within inspector will do reload ignoring cache.
Attachments
[PATCH] Proposed change.
(6.52 KB, patch)
2011-02-07 07:30 PST
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-02-07 07:30:55 PST
Created
attachment 81469
[details]
[PATCH] Proposed change.
Patrick Mueller
Comment 2
2011-02-07 07:49:29 PST
I'm curious as to whether the appcache cache is "ignored" as well. Because that would be a very useful feature - and we should make sure to note that externally as well. VERY useful feature. By "ignoring" the appcache, I guess I mean erase it and start from scratch - which implies all the resources in the manifest are going to be reloaded. Or is that combining too many side-effects?
Pavel Feldman
Comment 3
2011-02-07 08:49:12 PST
(In reply to
comment #2
)
> I'm curious as to whether the appcache cache is "ignored" as well. Because that would be a very useful feature - and we should make sure to note that externally as well. VERY useful feature. > > By "ignoring" the appcache, I guess I mean erase it and start from scratch - which implies all the resources in the manifest are going to be reloaded.
>
> Or is that combining too many side-effects?
AppCache management is a separate thing, we should provide appcache-releated actions / toggles on the corresponding page. But going to the browser window to do Cmd+Shift+r is so annoying. This is a most requested feature for the chrome devtools.
Pavel Feldman
Comment 4
2011-02-08 04:57:58 PST
Committed
r77922
: <
http://trac.webkit.org/changeset/77922
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug