2011-02-07  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: ignore cache upon reload via Ctrl(Cmd)+Shift+R.
        https://bugs.webkit.org/show_bug.cgi?id=53914

        * http/tests/inspector/inspector-test2.js:
        (initialize_InspectorTest.InspectorTest.reloadPage):
        * inspector/audits-panel-functional.html:
2011-02-07  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: ignore cache upon reload via Ctrl(Cmd)+Shift+R.
        https://bugs.webkit.org/show_bug.cgi?id=53914

        * inspector/Inspector.idl:
        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::reloadPage):
        * inspector/InspectorAgent.h:
        * inspector/front-end/AuditsPanel.js:
        (WebInspector.AuditsPanel.prototype._reloadResources):
        * inspector/front-end/ExtensionServer.js:
        (WebInspector.ExtensionServer.prototype._onReload):
        * inspector/front-end/inspector.js:
        (WebInspector.documentKeyDown):

Canonical link: https://commits.webkit.org/67981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77922 268f45cc-cd09-0410-ab3c-d52691b4dbfc